--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,10 @@ test:
   <<: *default
   database: cocktailscout4_test
 
+legacy:
+  <<: *default
+  database: cocktailscout3
+
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
