--- a/.github/workflows/gemini-coder.yml
+++ b/.github/workflows/gemini-coder.yml
@@ -32,4 +32,4 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_BODY: ${{ github.event.issue.body }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
-        run: python scripts/gemini_agent.py
+        run: python script/gemini_agent.py
