--- a/.github/workflows/gemini-coder.yml
+++ b/.github/workflows/gemini-coder.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: List files for debugging
+        run: ls -R
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
