gemini-bot coder

--- a/.github/workflows/gemini-coder.yml
+++ b/.github/workflows/gemini-coder.yml
@@ -35,4 +35,4 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_BODY: ${{ github.event.issue.body }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
-        run: python script/gemini_agent.py
+        run: python script/gemini-agent.py
