--- a/.github/workflows/gemini-coder.yml
+++ b/.github/workflows/gemini-coder.yml
@@ -17,16 +17,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: List files for debugging
-        run: ls -R
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       - name: Install Dependencies
-        run: pip install google-generativeai
+        run: pip install google-genai
 
       - name: Run Gemini Agent
         env:
