--- a/.github/workflows/gemini-coder.yml
+++ b/.github/workflows/gemini-coder.yml
@@ -1,7 +1,8 @@
 name: Gemini 3 Developer
 on:
   issues:
-    types: [labeled]
+    types:
+      - labeled
 
 jobs:
   gemini_job:
@@ -14,13 +15,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
 
       - name: Run Gemini Agent
         env:
