--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,135 +1,68 @@
-# name: CI
+name: CI
 
-# on:
-#   pull_request:
-#   push:
-#     branches: [ main ]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
-# jobs:
-#   scan_ruby:
-#     runs-on: ubuntu-latest
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v5
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
 
-#       - name: Set up Ruby
-#         uses: ruby/setup-ruby@v1
-#         with:
-#           bundler-cache: true
+      - name: Install dependencies
+        run: bundle install
 
-#       - name: Scan for common Rails security vulnerabilities using static analysis
-#         run: bin/brakeman --no-pager
-      
-#       - name: Scan for known security vulnerabilities in gems used
-#         run: bin/bundler-audit
-      
-#   lint:
-#     runs-on: ubuntu-latest
-#     env:
-#       RUBOCOP_CACHE_ROOT: tmp/rubocop
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v5
+      - name: Security Audit
+        run: bin/bundler-audit --update
 
-#       - name: Set up Ruby
-#         uses: ruby/setup-ruby@v1
-#         with:
-#           bundler-cache: true
+      - name: Security Brakeman
+        run: bin/brakeman -q -w2
 
-#       - name: Prepare RuboCop cache
-#         uses: actions/cache@v4
-#         env:
-#           DEPENDENCIES_HASH: ${{ hashFiles('.ruby-version', '**/.rubocop.yml', '**/.rubocop_todo.yml', 'Gemfile.lock') }}
-#         with:
-#           path: ${{ env.RUBOCOP_CACHE_ROOT }}
-#           key: rubocop-${{ runner.os }}-${{ env.DEPENDENCIES_HASH }}-${{ github.ref_name == github.event.repository.default_branch && github.run_id || 'default' }}
-#           restore-keys: |
-#             rubocop-${{ runner.os }}-${{ env.DEPENDENCIES_HASH }}-
+      - name: Lint Rubocop
+        run: bin/rubocop --parallel
 
-#       - name: Lint code for consistent style
-#         run: bin/rubocop -f github
+  test:
+    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: cocktailscout4_test
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
-#   test:
-#     runs-on: ubuntu-latest
+    env:
+      RAILS_ENV: test
+      DATABASE_URL: mysql2://root:password@127.0.0.1:3306/cocktailscout4_test
+      # Rails 8 might default to caching via database (SolidCache), so we ensure the DB is ready.
 
-#     services:
-#       mysql:
-#         image: mysql
-#         env:
-#           MYSQL_ALLOW_EMPTY_PASSWORD: true
-#         ports:
-#           - 3306:3306
-#         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-#       # redis:
-#       #   image: valkey/valkey:8
-#       #   ports:
-#       #     - 6379:6379
-#       #   options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
 
-#     steps:
-#       - name: Install packages
-#         run: sudo apt-get update && sudo apt-get install --no-install-recommends -y default-libmysqlclient-dev
+      - name: Install dependencies
+        run: bundle install
 
-#       - name: Checkout code
-#         uses: actions/checkout@v5
+      - name: Set up database
+        run: bin/rails db:prepare
 
-#       - name: Set up Ruby
-#         uses: ruby/setup-ruby@v1
-#         with:
-#           bundler-cache: true
-
-#       - name: Run tests
-#         env:
-#           RAILS_ENV: test
-#           DATABASE_URL: mysql2://127.0.0.1:3306
-#           # RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-#           # REDIS_URL: redis://localhost:6379/0
-#         run: bin/rails db:test:prepare test
-
-#   system-test:
-#     runs-on: ubuntu-latest
-
-#     services:
-#       mysql:
-#         image: mysql
-#         env:
-#           MYSQL_ALLOW_EMPTY_PASSWORD: true
-#         ports:
-#           - 3306:3306
-#         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
-#       # redis:
-#       #   image: valkey/valkey:8
-#       #   ports:
-#       #     - 6379:6379
-#       #   options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
-
-#     steps:
-#       - name: Install packages
-#         run: sudo apt-get update && sudo apt-get install --no-install-recommends -y default-libmysqlclient-dev
-
-#       - name: Checkout code
-#         uses: actions/checkout@v5
-
-#       - name: Set up Ruby
-#         uses: ruby/setup-ruby@v1
-#         with:
-#           bundler-cache: true
-
-#       - name: Run System Tests
-#         env:
-#           RAILS_ENV: test
-#           DATABASE_URL: mysql2://127.0.0.1:3306
-#           # RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-#           # REDIS_URL: redis://localhost:6379/0
-#         run: bin/rails db:test:prepare test:system
-
-#       - name: Keep screenshots from failed system tests
-#         uses: actions/upload-artifact@v4
-#         if: failure()
-#         with:
-#           name: screenshots
-#           path: ${{ github.workspace }}/tmp/screenshots
-#           if-no-files-found: ignore
+      - name: Run Tests
+        run: bin/rspec
