--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,10 @@ inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # Layout/SpaceInsideArrayLiteralBrackets:
 #   Enabled: false
+
+AllCops:
+  Exclude:
+    - 'legacy/**/*'
+    - 'db/legacy/**/*'
+    - 'node_modules/**/*'
+    - 'vendor/**/*'
