--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,27 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
+      - name: Configure database.yml for CI
+        run: |
+          cat <<EOF > config/database.yml
+          default: &default
+            adapter: mysql2
+            encoding: utf8mb4
+            pool: 5
+            username: root
+            password: password
+            host: 127.0.0.1
+            port: 3307
+
+          test:
+            <<: *default
+            database: cocktailscout4_test
+
+          legacy:
+            <<: *default
+            database: cocktailscout4_test
+          EOF
+
       - name: Set up database
         run: bin/rails db:prepare
 
