--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,19 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
+
       - name: Install dependencies
-        run: bundle install
+        run: |
+          bundle install
+          npm ci
+
+      - name: Build Vite assets
+        run: bin/vite build --mode=test
 
       - name: Configure database.yml for CI
         run: |
