--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,3 +13,21 @@ AllCops:
     - 'db/legacy/**/*'
     - 'node_modules/**/*'
     - 'vendor/**/*'
+
+Layout/TrailingWhitespace:
+  Enabled: false
+
+Layout/TrailingEmptyLines:
+  Enabled: false
+
+Layout/EmptyLinesAroundClassBody:
+  Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
+Layout/SpaceInsideArrayLiteralBrackets:
+  Enabled: false
+
+Layout/CommentIndentation:
+  Enabled: false
