--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-vue": "^5.2.4",
     "tailwindcss": "^4.1.18",
