--- a/config/deploy.beta.yml
+++ b/config/deploy.beta.yml
@@ -63,7 +63,7 @@ aliases:
 
 # Persistent storage volume for Active Storage files
 volumes:
-  - "cocktailscout4_storage:/rails/storage"
+  - "/home/pawel/cocktailscout4-storage:/rails/storage"
 
 # Bridge fingerprinted assets between versions (Vite uses public/vite)
 asset_path: /rails/public/vite
