overhaul import and make a verify import task

--- a/config/database.yml
+++ b/config/database.yml
@@ -62,40 +62,40 @@ legacy:
 production:
   primary: &primary_production
     <<: *default
-    database: <%= ENV.fetch("DATABASE_NAME") %>
+    database: <%= ENV.fetch("DATABASE_NAME", nil) %>
     username: cocktailscout4
-    password: <%= ENV["COCKTAILSCOUT4_DATABASE_PASSWORD"] %>
-    host: <%= ENV.fetch("DB_HOST") %>
+    password: <%= ENV.fetch("COCKTAILSCOUT4_DATABASE_PASSWORD", nil) %>
+    host: <%= ENV.fetch("DB_HOST", nil) %>
   cache:
     <<: *primary_production
-    database: <%= ENV.fetch("CACHE_DATABASE_NAME") %>
+    database: <%= ENV.fetch("CACHE_DATABASE_NAME", nil) %>
     migrations_paths: db/cache_migrate
   queue:
     <<: *primary_production
-    database: <%= ENV.fetch("QUEUE_DATABASE_NAME") %>
+    database: <%= ENV.fetch("QUEUE_DATABASE_NAME", nil) %>
     migrations_paths: db/queue_migrate
   cable:
     <<: *primary_production
-    database: <%= ENV.fetch("CABLE_DATABASE_NAME") %>
+    database: <%= ENV.fetch("CABLE_DATABASE_NAME", nil) %>
     migrations_paths: db/cable_migrate
 
 # Beta environment - uses same structure as production but different database names
 beta:
   primary: &primary_beta
     <<: *default
-    database: <%= ENV.fetch("DATABASE_NAME") %>
+    database: <%= ENV.fetch("DATABASE_NAME", nil) %>
     username: cocktailscout4
-    password: <%= ENV["COCKTAILSCOUT4_DATABASE_PASSWORD"] %>
-    host: <%= ENV.fetch("DB_HOST") %>
+    password: <%= ENV.fetch("COCKTAILSCOUT4_DATABASE_PASSWORD", nil) %>
+    host: <%= ENV.fetch("DB_HOST", nil) %>
   cache:
     <<: *primary_beta
-    database: <%= ENV.fetch("CACHE_DATABASE_NAME") %>
+    database: <%= ENV.fetch("CACHE_DATABASE_NAME", nil) %>
     migrations_paths: db/cache_migrate
   queue:
     <<: *primary_beta
-    database: <%= ENV.fetch("QUEUE_DATABASE_NAME") %>
+    database: <%= ENV.fetch("QUEUE_DATABASE_NAME", nil) %>
     migrations_paths: db/queue_migrate
   cable:
     <<: *primary_beta
-    database: <%= ENV.fetch("CABLE_DATABASE_NAME") %>
+    database: <%= ENV.fetch("CABLE_DATABASE_NAME", nil) %>
     migrations_paths: db/cable_migrate
