--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -69,7 +69,7 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "cocktailscout4_storage:/rails/storage"
+  - "/home/pawel/cocktailscout4-storage-production:/rails/storage"
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
