--- a/.kamal/secrets.example
+++ b/.kamal/secrets.example
@@ -13,6 +13,9 @@ export DOCKER_USERNAME=your_dockerhub_username
 # Docker Hub registry password (create token at https://hub.docker.com/settings/security)
 export KAMAL_REGISTRY_PASSWORD=your_docker_hub_token_here
 
+# Resend API key for email delivery
+export RESEND_API_KEY=resend_key
+
 # ==================
 # secrets.beta
 # ==================
