--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,63 +1,59 @@
-# Name of your application. Used to uniquely configure containers.
+# Production deployment configuration for prod.cocktailscout.de
+# Deploy with: kamal deploy
 service: cocktailscout4
 
-# Name of the container image (use your-user/app-name on external registries).
-image: cocktailscout4
+# Name of the container image
+image: jpzoidberg/cocktailscout4
 
-# Deploy to these servers.
+# Deploy to these servers
 servers:
   web:
-    - 192.168.0.1
+    - 23.88.50.20
+  # Uncomment if you want a separate job server later
   # job:
   #   hosts:
-  #     - 192.168.0.1
+  #     - 23.88.50.20
   #   cmd: bin/jobs
 
-# Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
-# If used with Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-#
-# Using an SSL proxy like this requires turning on config.assume_ssl and config.force_ssl in production.rb!
-#
-# Don't use this when deploying to multiple web servers (then you have to terminate SSL at your load balancer).
-#
-# proxy:
-#   ssl: true
-#   host: app.example.com
+# Enable SSL auto certification via Let's Encrypt for prod.cocktailscout.de
+proxy:
+  ssl: true
+  host: prod.cocktailscout.de
 
-# Where you keep your container images.
+# Docker Hub registry configuration
 registry:
-  # Alternatives: hub.docker.com / registry.digitalocean.com / ghcr.io / ...
-  server: localhost:5555
+  # For Docker Hub, leave server empty (uses default registry.hub.docker.com)
+  username: jpzoidberg
+  password:
+    - KAMAL_REGISTRY_PASSWORD
 
-  # Needed for authenticated registries.
-  # username: your-user
-
-  # Always use an access token rather than real password when possible.
-  # password:
-  #   - KAMAL_REGISTRY_PASSWORD
-
-# Inject ENV variables into containers (secrets come from .kamal/secrets).
+# Environment variables
 env:
   secret:
     - RAILS_MASTER_KEY
+    - COCKTAILSCOUT4_DATABASE_PASSWORD
     - RESEND_API_KEY
   clear:
-    # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
-    # When you start using multiple servers, you should split out job processing to a dedicated machine.
+    # Run the Solid Queue Supervisor inside the web server's Puma process
     SOLID_QUEUE_IN_PUMA: true
 
-    # Set number of processes dedicated to Solid Queue (default: 1)
-    # JOB_CONCURRENCY: 3
+    # Database configuration for MySQL accessory
+    DB_HOST: cocktailscout4-db
 
-    # Set number of cores available to the application on each server (default: 1).
-    # WEB_CONCURRENCY: 2
+    # Use production-specific database names
+    DATABASE_NAME: cocktailscout4_production
+    CACHE_DATABASE_NAME: cocktailscout4_production_cache
+    QUEUE_DATABASE_NAME: cocktailscout4_production_queue
+    CABLE_DATABASE_NAME: cocktailscout4_production_cable
 
-    # Match this to any external database server to configure Active Record correctly
-    # Use cocktailscout4-db for a db accessory server on same machine via local kamal docker network.
-    # DB_HOST: 192.168.0.2
+    # Rails environment - use production to load config/credentials/production.yml.enc
+    RAILS_ENV: production
 
-    # Log everything from Rails
-    # RAILS_LOG_LEVEL: debug
+    # Application host for mailer URLs
+    APP_HOST: prod.cocktailscout.de
+
+    # Optional: Set log level
+    # RAILS_LOG_LEVEL: info
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
@@ -67,55 +63,35 @@ aliases:
   logs: app logs -f
   dbc: app exec --interactive --reuse "bin/rails dbconsole --include-password"
 
-# Use a persistent storage volume for sqlite database files and local Active Storage files.
-# Recommended to change this to a mounted volume path that is backed up off server.
+# Persistent storage volume for Active Storage files
 volumes:
   - "/home/pawel/cocktailscout4-storage-production:/rails/storage"
 
-# Bridge fingerprinted assets, like JS and CSS, between versions to avoid
-# hitting 404 on in-flight requests. Combines all files from new and old
-# version inside the asset_path.
-asset_path: /rails/public/assets
+# Bridge fingerprinted assets between versions (Vite uses public/vite)
+asset_path: /rails/public/vite
 
 
-# Configure the image builder.
+# Configure the image builder
 builder:
   arch: amd64
 
-  # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
-  # remote: ssh://docker@docker-builder-server
-  #
-  # # Pass arguments and secrets to the Docker build process
-  # args:
-  #   RUBY_VERSION: ruby-3.4.7
-  # secrets:
-  #   - GITHUB_TOKEN
-  #   - RAILS_MASTER_KEY
+# SSH configuration - connect as user pawel with restricted sudo
+ssh:
+  user: pawel
 
-# Use a different ssh user than root
-# ssh:
-#   user: app
-
-# Use accessory services (secrets come from .kamal/secrets).
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     # Change to 3306 to expose port to the world instead of just local network.
-#     port: "127.0.0.1:3306:3306"
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
-#   redis:
-#     image: valkey/valkey:8
-#     host: 192.168.0.2
-#     port: 6379
-#     directories:
-#       - data:/data
+# MySQL database as an accessory
+accessories:
+  db:
+    image: mysql:8.0
+    host: 23.88.50.20
+    port: "127.0.0.1:3306:3306"
+    env:
+      clear:
+        MYSQL_ROOT_HOST: '%'
+      secret:
+        - MYSQL_ROOT_PASSWORD
+        - COCKTAILSCOUT4_DATABASE_PASSWORD
+    files:
+      - config/mysql/init-production.sh:/docker-entrypoint-initdb.d/setup.sh
+    directories:
+      - data:/var/lib/mysql
