--- a/.kamal/secrets.example
+++ b/.kamal/secrets.example
@@ -2,7 +2,7 @@
 # Copy this to:
 #   - secrets-common (shared secrets)
 #   - secrets.beta (beta environment)
-#   - secrets.production (production environment)
+#   - secrets (production environment)
 
 # ==================
 # secrets-common
