fix specs and brakeman warnings

--- a/config/deploy.beta.yml
+++ b/config/deploy.beta.yml
@@ -33,6 +33,7 @@ env:
     - RAILS_MASTER_KEY
     - COCKTAILSCOUT4_DATABASE_PASSWORD
     - RESEND_API_KEY
+    - BETA_AUTH_PASSWORD
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process
     SOLID_QUEUE_IN_PUMA: true
