move prod.cocktailscout.de to www.cocktailscout.de

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,4 +1,4 @@
-# Production deployment configuration for prod.cocktailscout.de
+# Production deployment configuration for www.cocktailscout.de
 # Deploy with: kamal deploy
 service: cocktailscout4
 
@@ -15,10 +15,10 @@ servers:
   #     - 23.88.50.20
   #   cmd: bin/jobs
 
-# Enable SSL auto certification via Let's Encrypt for prod.cocktailscout.de
+# Enable SSL auto certification via Let's Encrypt for www.cocktailscout.de
 proxy:
   ssl: true
-  host: prod.cocktailscout.de
+  host: www.cocktailscout.de
 
 # Docker Hub registry configuration
 registry:
@@ -51,7 +51,7 @@ env:
     RAILS_ENV: production
 
     # Application host for mailer URLs
-    APP_HOST: prod.cocktailscout.de
+    APP_HOST: www.cocktailscout.de
 
     # Optional: Set log level
     # RAILS_LOG_LEVEL: info
